--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,4 +14,17 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: pgp.mit.edu
-      run: gpg --keyserver ${{ matrix.keyserver }} --recv-keys E1A5C593CD419DE28E8315CF3C2525ED14360CDE CEACC9E15534EBABB82D3FA03353C9CEF108B584 16ACFD5FBD34880E584ECD2975E9CA927C18C076 8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8
+      run: |
+        for key in \
+            E1A5C593CD419DE28E8315CF3C2525ED14360CDE \
+            CEACC9E15534EBABB82D3FA03353C9CEF108B584 \
+            16ACFD5FBD34880E584ECD2975E9CA927C18C076 \
+            8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8 \
+          ; do \
+            timeout 5s gpg --keyserver pgp.mit.edu --recv-keys "${key}"
+            timeout 5s gpg --keyserver keyserver.pgp.com --recv-keys "${key}"
+            timeout 5s gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}"
+            timeout 5s gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}"
+            wait
+          done
+
