--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,8 +1,8 @@
 name: Build & test things
 on: push
 jobs:
-  build:
-    name: Builds all images
+  faster:
+    name: fetch all keys in parrallel
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -15,12 +15,34 @@ jobs:
             8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8 \
         )
 
-        time (timeout 5s gpg --keyserver pgp.mit.edu --recv-keys "${key}" &) || true
-        time (timeout 5s gpg --keyserver keyserver.pgp.com --recv-keys "${key}" &) || true
-        time (timeout 5s gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" &) || true
-        time (timeout 5s gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" &) || true
+        (timeout 5s gpg --keyserver pgp.mit.edu --recv-keys "${key}" &) || true
+        (timeout 5s gpg --keyserver keyserver.pgp.com --recv-keys "${key}" &) || true
+        (timeout 5s gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" &) || true
+        (timeout 5s gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" &) || true
 
         wait
-        echo "done"
 
+        echo "~~ done ~~"
+        gpg --list-keys
 
+  old:
+    name: Fetch keys opne-by-one
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v1
+      - name: All
+        run: |
+          for key in \
+              E1A5C593CD419DE28E8315CF3C2525ED14360CDE \
+              CEACC9E15534EBABB82D3FA03353C9CEF108B584 \
+              16ACFD5FBD34880E584ECD2975E9CA927C18C076 \
+              8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8 \
+            ; do
+              gpg --keyserver pgp.mit.edu --recv-keys "${key}" || \
+              gpg --keyserver keyserver.pgp.com --recv-keys "${key}" || \
+              gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" || \
+              gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" ;
+            done
+
+            echo "~~ done ~~"
+            gpg --list-keys
