--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,12 +15,12 @@ jobs:
             8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8 \
         )
 
-        (timeout 5s gpg --keyserver pgp.mit.edu --recv-keys "${key}" &) || true
-        (timeout 5s gpg --keyserver keyserver.pgp.com --recv-keys "${key}" &) || true
-        (timeout 5s gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" &) || true
-        (timeout 5s gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" &) || true
+        (gpg --keyserver pgp.mit.edu --recv-keys "${key}" &) || true
+        (gpg --keyserver keyserver.pgp.com --recv-keys "${key}" &) || true
+        (gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" &) || true
+        (gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" &) || true
 
-        wait
+        timeout 5s wait
 
         echo "~~ done ~~"
         gpg --list-keys
