--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,20 +15,12 @@ jobs:
             8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8 \
         )
 
-        pids=()
-        (gpg --keyserver pgp.mit.edu --recv-keys "${key}" || true &) || true
-        pids+=($!)
+        gpg --keyserver pgp.mit.edu --recv-keys "${key}" &
+        gpg --keyserver keyserver.pgp.com --recv-keys "${key}" &
+        gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" &
+        gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" &
 
-        (gpg --keyserver keyserver.pgp.com --recv-keys "${key}" || true &) || true
-        pids+=($!)
-
-        (gpg --keyserver ha.pool.sks-keyservers.net --recv-keys "${key}" || true &) || true
-        pids+=($!)
-
-        (gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys "${key}" || true &) || true
-        pids+=($!)
-
-        wait "${pids[@]}"
+        wait -n
 
         echo "~~ done ~~"
         gpg --list-keys
