--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,12 +15,12 @@ jobs:
             8695A8BFD3F97CDAAC35775A9CA4ABB381AB73C8 \
         )
 
-        gpg --keyserver pgp.mit.edu --recv-keys ${KEYS} &
+        gpg --keyserver pgp.mit.edu --recv-keys ${KEYS[@]} &
         sleep 1s
-        
-        gpg --keyserver keyserver.pgp.com --recv-keys ${KEYS} &
-        gpg --keyserver ha.pool.sks-keyservers.net --recv-keys ${KEYS} &
-        gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys ${KEYS} &
+
+        gpg --keyserver keyserver.pgp.com --recv-keys ${KEYS[@]} &
+        gpg --keyserver ha.pool.sks-keyservers.net --recv-keys ${KEYS[@]} &
+        gpg --keyserver hkp://p80.pool.sks-keyservers.net:80 --recv-keys ${KEYS[@]} &
 
         wait -n
 
