--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -16,7 +16,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'docker://busybox:latest'
-  entrypoint: ./entrypoint.sh
+  entrypoint: './entrypoint.sh'
   args:
     - ${{ inputs.username }}
 
