--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -2,10 +2,10 @@ name: Docker Hub README sync
 description: Sync README.md from Github to Docker Hub
 author: 'Damian Mee <spam@meedamian.com>'
 inputs:
-  username:
+  xxx:
     description: Docker Hub username
     required: true
-  password:
+  yyy:
     description: Docker Hub password
     required: true
   slug:
@@ -18,7 +18,7 @@ runs:
   image: 'docker://busybox:latest'
   entrypoint: './entrypoint.sh'
   args:
-    - ${{ inputs.username }}
+    - ${{ inputs.yyy }}
 
 branding:
   color: 'green'
