--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -16,8 +16,7 @@ inputs:
 runs:
   using: 'docker'
   image: 'docker://busybox:latest'
-  entrypoint:
-    - 'xxx'
+  entrypoint: 'xxx'
 
   args:
     - ${{ inputs.yyy }}
