try own docker action

--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -17,7 +17,8 @@ runs:
   using: 'docker'
   image: 'docker://busybox:latest'
   entrypoint: "ls"
-#  args:
+  args:
+    - "/"
 #    - ${{ inputs.yyy }}
 
 branding:
