--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -2,10 +2,10 @@ name: Docker Hub README sync
 description: Sync README.md from Github to Docker Hub
 author: 'Damian Mee <spam@meedamian.com>'
 inputs:
-  xxx:
+  username:
     description: Docker Hub username
     required: true
-  yyy:
+  password:
     description: Docker Hub password
     required: true
   slug:
@@ -17,7 +17,9 @@ runs:
   using: 'docker'
   image: 'Dockerfile'
   args:
-    - ${{ inputs.yyy }}
+    - ${{ inputs.username }}
+    - ${{ inputs.password }}
+    - ${{ inpute.slug }}
 
 branding:
   color: 'green'
