try own docker action

--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -19,7 +19,7 @@ runs:
   args:
     - ${{ inputs.username }}
     - ${{ inputs.password }}
-    - ${{ inpute.slug }}
+    - ${{ inputs.slug }}
 
 branding:
   color: 'green'
