--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -24,5 +24,5 @@ jobs:
       uses: meeDamian/docker-ci/sync-readme@master
       with:
         username: xxxx
-        password: ${{ secrets.password }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
