--- a/sync-readme/action.yml
+++ b/sync-readme/action.yml
@@ -2,17 +2,21 @@ name: Docker Hub README sync
 description: Sync README.md from Github to Docker Hub
 author: 'Damian Mee <spam@meedamian.com>'
 inputs:
-  username:
+  user:
     description: Docker Hub username
     required: true
 
-  password:
+  pass:
     description: Docker Hub password
     required: true
 
   slug:
     description: "Docker Hub repository path in the form of: <namespace>/<name>"
     required: true
+
+  readme:
+    description: Path to the README.md file.  Should be relative to repo root.
+    required: false
 
 runs:
   using: 'docker'
