try own docker action

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -26,5 +26,5 @@ jobs:
       with:
         user: ${{ secrets.DOCKER_USER }}
         pass: ${{ secrets.DOCKER_PASS }}
-#        slug: ${{ github.repository }}
+        slug: ${{ github.repository }}
 
