--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -7,17 +7,17 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Dump GitHub context
-      run: ${{ toJson(github) }}
+      run: echo "${{ toJson(github) }}"
     - name: Dump strategy context
-      run: ${{ toJson(strategy) }}
+      run: echo "${{ toJson(strategy) }}"
     - name: Dump matrix context
-      run: ${{ toJson(matrix) }}
+      run: echo "${{ toJson(matrix) }}"
     - name: Dump job context
-      run: ${{ toJson(job) }}
+      run: echo "${{ toJson(job) }}"
     - name: Dump runner context
-      run: ${{ toJson(runner) }}
+      run: echo "${{ toJson(runner) }}"
     - name: Dump steps context
-      run: ${{ toJson(steps) }}
+      run: echo "${{ toJson(steps) }}"
 
 #    - name: All
 #      run: docker build -t test --file Dockerfile .
