--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,5 +1,11 @@
 name: Build & test things
 on: push
+push:
+  branches:
+  - master
+  tags:
+  - v1.0.0
+
 jobs:
   faster:
     name: fetch all keys in parrallel
