--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,12 +12,10 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: own action
-      uses: meeDamian/sync-readme@test
+      uses: meeDamian/sync-readme@v1.0.1
       with:
-        user: ${{ secrets.DOCKER_USER }}
         pass: ${{ secrets.DOCKER_PASS }}
-        slug: ${{ github.repository }}
-
+        
     - name: Dump strategy context
       run: echo "${{ toJson(strategy) }}"
     - name: Dump matrix context
