--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,10 +12,10 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: own action
-      uses: meeDamian/sync-readme@v1.0.1
+      uses: meeDamian/sync-readme@test
       with:
         pass: ${{ secrets.DOCKER_PASS }}
-        
+
     - name: Dump strategy context
       run: echo "${{ toJson(strategy) }}"
     - name: Dump matrix context
