--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -12,9 +12,10 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: own action
-      uses: meeDamian/sync-readme@test
+      uses: meeDamian/sync-readme@v1.0.4
       with:
         pass: ${{ secrets.DOCKER_PASS }}
+        description: true
 
     - name: Dump strategy context
       run: echo "${{ toJson(strategy) }}"
