--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -1,12 +1,15 @@
-name: Build & test things
-on:
-  push:
-    branches:
-    - master
+name: build
+
+#on:
+#  push:
+#    branches:
+#    - master
+
+on: push
 
 jobs:
   faster:
-    name: fetch all keys in parrallel
+    name: build
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
@@ -16,6 +19,10 @@ jobs:
       with:
         pass: ${{ secrets.DOCKER_PASS }}
         description: true
+
+    - name: Only run on tag
+      if: startsWith(github.ref, 'refs/tags/')
+      run: echo "A tag was pushed!"
 
     - name: Dump strategy context
       run: echo "${{ toJson(strategy) }}"
