--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -14,48 +14,37 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: own action
+    - name: All
+      run: docker build -t sample-image --file Dockerfile .
+
+    - name: Save all build containers to files
+      run: >
+        mkdir -p out/ &&
+        docker images sample-image --format "{{.Repository}}:{{.Tag}}" | xargs -I% sh -c "docker save % | gzip > out/%.tgz" &&
+        for file in $(ls out/); do
+          mv out/${file} out/$(echo ${file} | tr : -)
+        done
+
+    - name: extract file from container
+      run: >
+        ls -la &&
+        ID=$(docker create sample-image) &&
+        docker cp "${ID}:/files/" out/ &&
+        docker rm -v "${ID}"
+
+    - name: Upload
+      uses: actions/upload-artifact@master
+      with:
+        name: containers
+        path: out/
+
+
+    - name: Update README & description on Docker Hub
+      if: startsWith(github.ref, 'refs/tags/')
       uses: meeDamian/sync-readme@v1.0.4
       with:
         pass: ${{ secrets.DOCKER_PASS }}
         description: true
 
-    - name: Only run on tag
-      if: startsWith(github.ref, 'refs/tags/')
-      run: echo "A tag was pushed!"
 
-    - name: Dump strategy context
-      run: echo "${{ toJson(strategy) }}"
-    - name: Dump matrix context
-      run: echo "${{ toJson(matrix) }}"
-    - name: Dump job context
-      run: echo "${{ toJson(job) }}"
-    - name: Dump runner context
-      run: echo "${{ toJson(runner) }}"
-    - name: Dump steps context
-      run: echo "${{ toJson(steps) }}"
-    - name: Dump GitHub context
-      run: echo "${{ toJson(github) }}"
-
-#    - name: All
-#      run: docker build -t test --file Dockerfile .
-#    - name: Save all
-#      run: >
-#        mkdir -p out/ &&
-#        docker images test --format "{{.Repository}}:{{.Tag}}" | xargs -I% sh -c "docker save % | gzip > out/%.tgz" &&
-#        for file in $(ls out/); do
-#          mv out/${file} out/$(echo ${file} | tr : -)
-#        done
-#    - name: Upload
-#      uses: actions/upload-artifact@master
-#      with:
-#        name: containers
-#        path: out/
-
-#    - name: own action
-#      uses: meeDamian/sync-readme@v1.0.0
-#      with:
-#        user: ${{ secrets.DOCKER_USER }}
-#        pass: ${{ secrets.DOCKER_PASS }}
-#        slug: ${{ github.repository }}
 
