test action outputs

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -45,6 +45,9 @@ jobs:
         path: out/
 
     - name: Steps info
+      run: echo "${{ toJson(job.steps) }}"
+
+    - name: Steps info
       run: echo "${{ toJson(steps.a-unique-step-id) }}"
 
 
