--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -28,9 +28,7 @@ jobs:
         go version
 
     - name: Enable emulation
-      run: |
-        docker pull meedamian/simple-qemu:v4.1.0
-        docker run --rm --privileged meedamian/simple-qemu:v4.1.0 --reset -p yes
+      run: docker run --rm --privileged meedamian/simple-qemu:v4.1 --reset -p yes
 
     - name: try to run risc-v
       run: docker run carlosedp/whoami:riscv64
