--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -33,7 +33,7 @@ jobs:
 #        docker run --rm --privileged meedamian/simple-qemu:v4.1 --reset -p yes
 
     - name: try to run risc-v
-      run: docker run carlosedp/whoami:riscv64
+      run: docker run carlosedp/debian:sid-riscv64 uname -a
 
     - name: All
       run: docker build -t sample-image --file Dockerfile .
