--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,6 +22,11 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
+    - name: Verify that git tag build is the same as used for build
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        [ $(cat ./VERSION) == "$(echo ${GITHUB_REF} | awk -F/ '{print $NF}')" ]
+
     - name: aaa
       run: |
         echo ${{ matrix.arch }}
