Nothing to see here

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -25,7 +25,12 @@ jobs:
     - name: Verify that git tag build is the same as used for build
       if: startsWith(github.ref, 'refs/tags/')
       run: |
-        [ $(cat ./VERSION) == "$(echo ${GITHUB_REF} | awk -F/ '{print $NF}')" ]
+        GIT_VER="$(echo ${GITHUB_REF} | awk -F/ '{print $NF}')"
+        FILE_VER="$(cat ./VERSION)"
+        if [ "${GIT_VER" != "${FILE_VER}" ]; then
+          printf "\nVersion mismatch!  Tagged as %s, while file claims %s\n\n" "${GIT_VER" "${FILE_VER}"
+          exit 1
+        fi
 
     - name: aaa
       run: |
