--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -22,20 +22,14 @@ jobs:
     steps:
     - uses: actions/checkout@v1
 
-    - name: Verify that git tag build is the same as used for build
-      if: startsWith(github.ref, 'refs/tags/')
-      run: |
-        GIT_VER="$(echo ${GITHUB_REF} | awk -F/ '{print $NF}')"
-        FILE_VER="$(cat ./VERSION)"
-        if [ "${GIT_VER}" != "${FILE_VER}" ]; then
-          printf "\nVersion mismatch!  Tagged as %s, while file claims %s\n\n" "${GIT_VER}" "${FILE_VER}"
-          exit 1
-        fi
+    - uses: meeDamian/github-release@1.0
+      with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        tag: v0.66.66
+        files: Dockerfile
 
-    - name: aaa
-      run: |
-        echo ${{ matrix.arch }}
-        go version
+
+
 
     - name: Enable emulation
       run: |
