--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -35,7 +35,7 @@ jobs:
       uses: meeDamian/sync-readme@v1.0.5
       with:
         pass: ${{ secrets.DOCKER_PASS }}
-        slug: "${GITHUB_REPOSITORY/docker-/}"
+        slug: $( echo ${GITHUB_REPOSITORY/docker-/})
         description: true
 
 #    - run: ls aaa/* | sha256sum
