--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,20 +23,12 @@ jobs:
     - uses: actions/checkout@v1
 
     - run: |
-        mkdir -p ~/.docker
+        echo "command one"
+        echo "command two"
 
-        echo '{ "experimental": "enabled" }' > ~/.docker/config.json
-        sudo systemctl restart docker
-        docker version
-
-    - run: docker manifest inspect alpine
-
-    - name: Sync README.md with Docker Hub
-      uses: meeDamian/sync-readme@v1.0.5
-      with:
-        pass: ${{ secrets.DOCKER_PASS }}
-        slug: $( echo ${GITHUB_REPOSITORY/docker-/})
-        description: true
+    - run: >
+        echo
+          "command three"
 
 #    - run: ls aaa/* | sha256sum
 #
