--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,7 +23,9 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Login to Github Registry
-      run: docker login docker.pkg.github.com -u meedamian -p "${{ secrets.GITHUB_TOKEN }}"
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: docker login docker.pkg.github.com -u meedamian -p "${GITHUB_TOKEN}"
 
     - name: Push all images to Github Registry
       run: |
