--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -23,9 +23,7 @@ jobs:
     - uses: actions/checkout@v1
 
     - name: Login to Github Registry
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      run: docker login docker.pkg.github.com -u meedamian -p "${GITHUB_TOKEN}"
+      run: docker login docker.pkg.github.com -u meedamian -p "${{ secrets.YET_ANOTHER_GITHUB_TOKEN }}"
 
     - name: Push all images to Github Registry
       run: |
